smoke-test/nginx-test-traefik.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp
  namespace: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webapp
  template:
    metadata:
      labels:
        app: nginx-webapp
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-nginx
spec:
  selector:
    app: nginx-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test-nginx
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - test.example.com
      secretName: traefik-default-cert
  rules:
    - host: test.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
